# diary

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
deploy/: README.md  diary.service  nginx.conf
diary/: __init__.py  db.py
diary/routes/: __init__.py  auth.py  diary.py  home.py  search.py  tags.py
diary/static/css/: base.css  preview.css
diary/templates/: base.html
diary/templates/auth/: login.html  register.html
diary/templates/diary/: detail.html  edit.html  index.html  new.html
diary/templates/home/: preview.html  title.html
diary/templates/search/: history.html  index.html
diary/templates/tags/: edit.html  index.html  new.html  trees.html
instance/: schema.sql
